--- a/result/2021-12-24.md
+++ b/result/2021-12-24.md
@@ -21,7 +21,7 @@
 21. [德国商会警告立陶宛](https://s.weibo.com//weibo?q=%E5%BE%B7%E5%9B%BD%E5%95%86%E4%BC%9A%E8%AD%A6%E5%91%8A%E7%AB%8B%E9%99%B6%E5%AE%9B&Refer=top) 442413
 22. [黄渤辣目洋子在电视购物频道上过班吧](https://s.weibo.com//weibo?q=%23%E9%BB%84%E6%B8%A4%E8%BE%A3%E7%9B%AE%E6%B4%8B%E5%AD%90%E5%9C%A8%E7%94%B5%E8%A7%86%E8%B4%AD%E7%89%A9%E9%A2%91%E9%81%93%E4%B8%8A%E8%BF%87%E7%8F%AD%E5%90%A7%23&Refer=top) 442198
 23. [单身即地狱 宋智雅](https://s.weibo.com//weibo?q=%E5%8D%95%E8%BA%AB%E5%8D%B3%E5%9C%B0%E7%8B%B1%20%E5%AE%8B%E6%99%BA%E9%9B%85&Refer=top) 441925
-24. [圣诞文案](https://s.weibo.com//weibo?q=%E5%9C%A3%E8%AF%9E%E6%96%87%E6%A1%88&Refer=top) 403096
+24. [圣诞文案](https://s.weibo.com//weibo?q=%E5%9C%A3%E8%AF%9E%E6%96%87%E6%A1%88&Refer=top) 409454
 25. [刘端端皇子半永久吧](https://s.weibo.com//weibo?q=%23%E5%88%98%E7%AB%AF%E7%AB%AF%E7%9A%87%E5%AD%90%E5%8D%8A%E6%B0%B8%E4%B9%85%E5%90%A7%23&Refer=top) 382749
 26. [湘西女教师被强送精神病院家属发声](https://s.weibo.com//weibo?q=%23%E6%B9%98%E8%A5%BF%E5%A5%B3%E6%95%99%E5%B8%88%E8%A2%AB%E5%BC%BA%E9%80%81%E7%B2%BE%E7%A5%9E%E7%97%85%E9%99%A2%E5%AE%B6%E5%B1%9E%E5%8F%91%E5%A3%B0%23&Refer=top) 343559
 27. [38款洗面奶大评测](https://s.weibo.com//weibo?q=%2338%E6%AC%BE%E6%B4%97%E9%9D%A2%E5%A5%B6%E5%A4%A7%E8%AF%84%E6%B5%8B%23&Refer=top) 323274
@@ -42,13 +42,14 @@
 42. [中华白海豚或在5代后完全灭绝](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%8D%8E%E7%99%BD%E6%B5%B7%E8%B1%9A%E6%88%96%E5%9C%A85%E4%BB%A3%E5%90%8E%E5%AE%8C%E5%85%A8%E7%81%AD%E7%BB%9D%23&Refer=top) 219555
 43. [陈佳佳出国](https://s.weibo.com//weibo?q=%23%E9%99%88%E4%BD%B3%E4%BD%B3%E5%87%BA%E5%9B%BD%23&Refer=top) 215308
 44. [圣诞礼物卷起来了](https://s.weibo.com//weibo?q=%23%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9%E5%8D%B7%E8%B5%B7%E6%9D%A5%E4%BA%86%23&Refer=top) 214621
-45. [在太空出差会长高吗](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E5%A4%AA%E7%A9%BA%E5%87%BA%E5%B7%AE%E4%BC%9A%E9%95%BF%E9%AB%98%E5%90%97%23&Refer=top) 198390
-46. [西安](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%23&Refer=top) 196818
-47. [还以为是个普通的游戏](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E6%B8%B8%E6%88%8F%23&Refer=top) 196218
-48. [网信办打击流量造假黑公关和网络水军](https://s.weibo.com//weibo?q=%23%E7%BD%91%E4%BF%A1%E5%8A%9E%E6%89%93%E5%87%BB%E6%B5%81%E9%87%8F%E9%80%A0%E5%81%87%E9%BB%91%E5%85%AC%E5%85%B3%E5%92%8C%E7%BD%91%E7%BB%9C%E6%B0%B4%E5%86%9B%23&Refer=top) 181568
+45. [网信办打击流量造假黑公关和网络水军](https://s.weibo.com//weibo?q=%23%E7%BD%91%E4%BF%A1%E5%8A%9E%E6%89%93%E5%87%BB%E6%B5%81%E9%87%8F%E9%80%A0%E5%81%87%E9%BB%91%E5%85%AC%E5%85%B3%E5%92%8C%E7%BD%91%E7%BB%9C%E6%B0%B4%E5%86%9B%23&Refer=top) 199636
+46. [在太空出差会长高吗](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E5%A4%AA%E7%A9%BA%E5%87%BA%E5%B7%AE%E4%BC%9A%E9%95%BF%E9%AB%98%E5%90%97%23&Refer=top) 198390
+47. [西安](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%23&Refer=top) 196818
+48. [还以为是个普通的游戏](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E6%B8%B8%E6%88%8F%23&Refer=top) 196218
 49. [马尔泰是可爱界天花板吧](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E5%B0%94%E6%B3%B0%E6%98%AF%E5%8F%AF%E7%88%B1%E7%95%8C%E5%A4%A9%E8%8A%B1%E6%9D%BF%E5%90%A7%23&Refer=top) 168031
 50. [考研](https://s.weibo.com//weibo?q=%E8%80%83%E7%A0%94&Refer=top) 157380
 51. [近三成带货主播涉违规](https://s.weibo.com//weibo?q=%23%E8%BF%91%E4%B8%89%E6%88%90%E5%B8%A6%E8%B4%A7%E4%B8%BB%E6%92%AD%E6%B6%89%E8%BF%9D%E8%A7%84%23&Refer=top) 155909
 52. [薇娅倒下后行业将迎来哪些变化](https://s.weibo.com//weibo?q=%23%E8%96%87%E5%A8%85%E5%80%92%E4%B8%8B%E5%90%8E%E8%A1%8C%E4%B8%9A%E5%B0%86%E8%BF%8E%E6%9D%A5%E5%93%AA%E4%BA%9B%E5%8F%98%E5%8C%96%23&Refer=top) 155640
 53. [按下暂停键的西安](https://s.weibo.com//weibo?q=%23%E6%8C%89%E4%B8%8B%E6%9A%82%E5%81%9C%E9%94%AE%E7%9A%84%E8%A5%BF%E5%AE%89%23&Refer=top) 152898
 54. [李田田](https://s.weibo.com//weibo?q=%E6%9D%8E%E7%94%B0%E7%94%B0&Refer=top) 149904
+55. [2021中国人的仪式感](https://s.weibo.com//weibo?q=%232021%E4%B8%AD%E5%9B%BD%E4%BA%BA%E7%9A%84%E4%BB%AA%E5%BC%8F%E6%84%9F%23&Refer=top) 76576
