--- a/result/2021-12-24.md
+++ b/result/2021-12-24.md
@@ -53,3 +53,4 @@
 53. [按下暂停键的西安](https://s.weibo.com//weibo?q=%23%E6%8C%89%E4%B8%8B%E6%9A%82%E5%81%9C%E9%94%AE%E7%9A%84%E8%A5%BF%E5%AE%89%23&Refer=top) 152898
 54. [李田田](https://s.weibo.com//weibo?q=%E6%9D%8E%E7%94%B0%E7%94%B0&Refer=top) 149904
 55. [2021中国人的仪式感](https://s.weibo.com//weibo?q=%232021%E4%B8%AD%E5%9B%BD%E4%BA%BA%E7%9A%84%E4%BB%AA%E5%BC%8F%E6%84%9F%23&Refer=top) 76576
+56. [平安夜文案](https://s.weibo.com//weibo?q=%E5%B9%B3%E5%AE%89%E5%A4%9C%E6%96%87%E6%A1%88&Refer=top) 56675
