--- a/result/2021-12-24.md
+++ b/result/2021-12-24.md
@@ -56,5 +56,6 @@
 56. [2021中国人的仪式感](https://s.weibo.com//weibo?q=%232021%E4%B8%AD%E5%9B%BD%E4%BA%BA%E7%9A%84%E4%BB%AA%E5%BC%8F%E6%84%9F%23&Refer=top) 76576
 57. [四川一受伤秃鹫获救后赖着不走](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E4%B8%80%E5%8F%97%E4%BC%A4%E7%A7%83%E9%B9%AB%E8%8E%B7%E6%95%91%E5%90%8E%E8%B5%96%E7%9D%80%E4%B8%8D%E8%B5%B0%23&Refer=top) 70563
 58. [西安封闭管理第一天](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E5%B0%81%E9%97%AD%E7%AE%A1%E7%90%86%E7%AC%AC%E4%B8%80%E5%A4%A9&Refer=top) 54340
-59. [圣诞可可抹茶蛋糕](https://s.weibo.com//weibo?q=%23%E5%9C%A3%E8%AF%9E%E5%8F%AF%E5%8F%AF%E6%8A%B9%E8%8C%B6%E8%9B%8B%E7%B3%95%23&Refer=top) 21999
+59. [圣诞可可抹茶蛋糕](https://s.weibo.com//weibo?q=%23%E5%9C%A3%E8%AF%9E%E5%8F%AF%E5%8F%AF%E6%8A%B9%E8%8C%B6%E8%9B%8B%E7%B3%95%23&Refer=top) 24639
 60. [为肉夹馍加油](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E8%82%89%E5%A4%B9%E9%A6%8D%E5%8A%A0%E6%B2%B9%23&Refer=top) 17363
+61. [高校齐唱夜空中最亮的星祝福考研生](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%A0%A1%E9%BD%90%E5%94%B1%E5%A4%9C%E7%A9%BA%E4%B8%AD%E6%9C%80%E4%BA%AE%E7%9A%84%E6%98%9F%E7%A5%9D%E7%A6%8F%E8%80%83%E7%A0%94%E7%94%9F%23&Refer=top) 15447
